<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorQuaseBranco"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/clientes_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@color/colorSalmao"
            android:layout_marginLeft="130dp"
            android:text="Clientes"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/carros_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="170dp"
            android:layout_marginLeft="130dp"

            android:background="@color/colorSalmao"
            android:text="CARROS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/contratos_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSalmao"
            android:layout_marginTop="240dp"
            android:layout_marginLeft="130dp"
            android:text="CONTRATOS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/funcionarios_button"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:background="@color/colorSalmao"
            android:layout_marginTop="310dp"
            android:layout_marginLeft="130dp"
            android:text="FUNCIONÁRIOS"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/qr_code_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:layout_below="@+id/button5"
            android:layout_marginTop="380dp"

            android:background="@color/colorSalmao"
            android:layout_marginLeft="130dp"
            android:text="Ler QR_Code"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/sobre_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button5"
            android:layout_alignStart="@+id/button5"
            android:layout_below="@+id/button5"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="450dp"
            android:background="@color/colorSalmao"
            android:text="SOBRE"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/Menu_Text"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="21dp"
            android:layout_marginLeft="95dp"
            android:fontFamily="sans-serif"
            android:text="Menu QR_Car"
            android:textSize="30dp"
            android:textStyle="bold" />
    </FrameLayout>
</LinearLayout>