<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorQuaseBranco">

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent">

        <TextView
            android:id="@+id/logintext"
            android:layout_width="230dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="66dp"
            android:layout_marginRight="66dp"
            android:layout_marginTop="21dp"
            android:fontFamily="sans-serif"
            android:text="Login QR_Car"
            android:textSize="30dp"
            android:textColor="@color/colordarkred"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/qr_car_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/logintext"
            android:layout_alignLeft="@+id/logintext"
            android:layout_alignRight="@+id/logintext"
            android:layout_alignStart="@+id/logintext"
            android:layout_below="@+id/logintext"
            app:srcCompat="@drawable/qr_code" />

        <TextView
            android:id="@+id/login_text"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/qr_car_image"

            android:layout_marginLeft="45dp"
            android:layout_marginStart="45dp"
            android:layout_marginTop="3dp"
            android:fontFamily="sans-serif"
            android:text="Login:"
            android:textSize="22dp"

            android:textColor="@color/colorMarrom"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/senha_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/login_text"
            android:layout_alignStart="@+id/login_text"
            android:layout_below="@+id/login_text"
            android:layout_marginTop="24dp"
            android:fontFamily="sans-serif"
            android:text="Senha:"
            android:textSize="22dp"

            android:textColor="@color/colorMarrom"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/login_senha_input"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/senha_text"
            android:layout_toEndOf="@+id/login_text"
            android:layout_toRightOf="@+id/login_text"
            android:ems="10"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/login_user_input"
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/qr_car_image"
            android:layout_toEndOf="@+id/login_text"
            android:layout_toRightOf="@+id/login_text"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <Button
            android:id="@+id/login_entrar_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_senha_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="21dp"
            android:background="@color/colorSalmao"
            android:fontFamily="sans-serif"
            android:text="Entrar"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            android:textStyle="bold" />/>

    </RelativeLayout>
</LinearLayout>